--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,7 @@ python-dotenv>=1.0.0
 sqlalchemy>=2.0.0
 psycopg2-binary>=2.9.0
 alembic>=1.14.0
+coverage==7.13.3
+pytest==9.0.2
+pytest-cov==7.0.0
+sentry-sdk==2.52.0
