feat(auth): implement JWT authentication, password hashing and protected /me endpoint
- Security utilities for Bcrypt and JWT\n- Login endpoint for OAuth2 token generation\n- get_current_user dependency for endpoint protection\n- Users /me endpoint for verification\n- Fixed lint-staged backend command

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
       "vitest related --run"
     ],
     "../backend/**/*.py": [
-      "cd ../backend && . venv/bin/activate && pytest"
+      "bash -c 'cd ../backend && . venv/bin/activate && pytest'"
     ]
   },
   "dependencies": {
