--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ alembic==1.18.3
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
-bcrypt==5.0.0
+bcrypt==4.0.1
 certifi==2026.1.4
 cffi==2.0.0
 click==8.3.1
@@ -45,3 +45,5 @@ uvicorn==0.40.0
 uvloop==0.22.1
 watchfiles==1.1.1
 websockets==16.0
+Pillow==12.1.0
+pytest-asyncio==1.3.0
