--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,13 @@
   },
   "dependencies": {
     "@sentry/nextjs": "^10.38.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.58.2",
