--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@sentry/nextjs": "^10.38.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
@@ -29,7 +30,9 @@
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "react-hook-form": "^7.71.1",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@playwright/test": "^1.58.2",
