--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@sentry/nextjs": "^10.38.0",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
