--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:e2e": "playwright test",
-    "prepare": "cd .. && husky frontend/.husky"
+    "prepare": "cd .. && husky .husky"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
