feat: implement user management CRUD and fix critical integration bugs

--- a/.agent/mcp_config.json
+++ b/.agent/mcp_config.json
@@ -15,8 +15,15 @@
                 "shadcn@latest",
                 "mcp"
             ]
+        },
+        "linear": {
+            "command": "npx",
+            "args": [
+                "-y",
+                "mcp-remote",
+                "https://mcp.linear.app/mcp"
+            ]
         }
-        //other mcp servers
     }
 }
 
