--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,13 @@
     ]
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
     "@sentry/nextjs": "^10.38.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.34.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
