feat(calendar): implement TFM-15 backend api for calendar with RBAC & fix pre-commit hook

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
       "vitest related --run"
     ],
     "../backend/**/*.py": [
-      "bash -c 'cd ../backend && . venv/bin/activate && pytest'"
+      "bash -c 'cd ../backend && . venv/bin/activate && export PYTHONPATH=$PYTHONPATH:. && pytest'"
     ]
   },
   "dependencies": {
