docs: translate proprietary license to spanish

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,14 @@ POSTGRES_DB=mdevia_tfm
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
-# Sentry
-SENTRY_DSN=https://examplePublicKey@o0.ingest.sentry.io/0
-NEXT_PUBLIC_SENTRY_DSN=https://examplePublicKey@o0.ingest.sentry.io/0
-SENTRY_AUTH_TOKEN=
+# Storage Configuration
+STORAGE_TYPE=local
+STORAGE_LOCAL_PATH=storage
+STORAGE_BASE_URL=http://localhost:8000/static
+
+# Cloudinary Configuration (Used if STORAGE_TYPE=cloudinary)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+CLOUDINARY_FOLDER=mdevia_tfm
+CLOUDINARY_WATERMARK_ID=path/to/watermark_id
